# GlycemicGPT

./: .coderabbit.yaml  .env.example  .gitattributes  .gitignore  .release-please-changelog.md  .release-please-manifest.json  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  GOVERNANCE.md  MEDICAL-DISCLAIMER.md  README.md  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  osv-scanner.toml  release-please-config.json
.github/: CODEOWNERS  (+8 more)
apps/api/: Dockerfile  README.md  pyproject.toml
apps/api/knowledge/: diabetes-patterns.md  insulin-types.md
apps/api/migrations/: env.py
apps/api/migrations/versions/: 001_initial.py  002_disclaimer_acknowledgments.py  003_create_users_table.py  004_create_integration_credentials.py  005_create_glucose_readings.py  006_create_pump_events.py  007_add_region_to_credentials.py  008_add_control_iq_fields.py  009_create_ai_provider_configs.py  010_create_daily_briefs.py  011_create_meal_analyses.py  012_create_correction_analyses.py  013_create_safety_logs.py  014_create_suggestion_responses.py  015_create_alert_thresholds.py  016_create_alerts.py  017_create_emergency_contacts.py  018_create_escalation_configs.py  019_create_escalation_events.py  020_create_telegram_links.py  021_create_caregiver_links.py  022_create_caregiver_invitations.py  023_add_caregiver_permissions.py  024_create_target_glucose_ranges.py  025_create_brief_delivery_configs.py  026_create_data_retention_configs.py  027_add_display_name_to_users.py  028_expand_ai_provider_types.py  029_add_insulin_config_and_bg_reading.py  030_ai_provider_sidecar_fields.py  031_create_pump_profiles.py  032_add_tandem_cloud_upload.py  033_add_device_registrations.py  034_add_tandem_pumper_id.py  035_add_urgent_glucose_thresholds.py  036_add_battery_reservoir_event_types.py  037_create_safety_limits.py  038_add_daily_bolus_and_validation_log.py  039_device_binding_and_api_keys.py  040_add_build_type_check_constraints.py  (+9 more)
apps/api/scripts/: start.sh
apps/api/src/: __init__.py  config.py  database.py  logging_config.py  main.py
apps/api/src/core/: auth.py  encryption.py  migrations.py  scopes.py  security.py  token_blacklist.py
apps/api/src/integrations/: __init__.py  claude.py  openai_client.py
apps/api/src/middleware/: __init__.py  correlation.py  csrf.py  rate_limit.py  security_headers.py
apps/api/tests/: conftest.py  test_aggregate_stats.py  test_ai_client.py  test_ai_provider.py  test_alert_api.py  test_alert_notifier.py  test_alert_sse.py  test_alert_thresholds.py  test_analytics_config.py  test_api_keys.py  test_audit_service.py  test_auth.py  test_brief_delivery_config.py  test_brief_notifier.py  test_caregiver_ai_chat.py  test_caregiver_dashboard.py  test_caregiver_invitations.py  test_caregiver_link.py  test_caregiver_permissions.py  test_caregiver_read_only.py  test_chat_history.py  test_correction_analysis.py  test_daily_brief.py  test_data_purge.py  test_data_retention_config.py  test_database.py  test_device_binding.py  test_device_registration.py  test_diabetes_context.py  test_disclaimer.py  test_emergency_contacts.py  test_escalation_config.py  test_escalation_engine.py  test_glucose.py  test_glucose_stream.py  test_health.py  test_insights.py  test_insulin_config.py  test_integrations.py  test_iob_projection.py  (+26 more)
(+802 files in other folders)
