[project]
name = "glycemicgpt-api"
version = "0.1.77" # x-release-please-version
description = "GlycemicGPT FastAPI Backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic[email]>=2.6.0",
    "pydantic-settings>=2.1.0",
    "sqlalchemy[asyncio]>=2.0.25",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "redis>=5.0.0",
    "httpx>=0.26.0",
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.0.0",
    "python-multipart>=0.0.6",
    "pydexcom>=0.2.0",
    "apscheduler>=3.10.0",
    "tconnectsync>=2.3.0",
    "anthropic>=0.40.0",
    "openai>=1.50.0",
    "setuptools>=69.0.0,<82",  # tconnectsync needs pkg_resources, removed in setuptools 82
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.26.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 88
exclude = [
    "migrations/",
    ".venv/",
    "__pycache__/",
]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = [
    "E501",   # Line too long (handled by formatter)
    "B008",   # Function call in default argument (FastAPI Depends pattern)
    "B904",   # raise ... from err in exception handling
    "UP042",  # str, enum.Enum pattern (intentional for JSON serialization)
    "SIM102", # Nested if statements (sometimes more readable)
    "SIM105", # contextlib.suppress (try/except/pass is clearer)
]

[tool.ruff.lint.per-file-ignores]
"tests/conftest.py" = ["E402"]  # Imports after settings override

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
strict = true
